--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
-    height: 200px;
-    background-color: #101418;
+    height: 50px;
+    background-color: #095c60;
     display: flex;
     justify-content: center;
     align-items: center;
