--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
-    height: 100px;
-    background-color: #121619;
+    height: 80px;
+    background-color:#095c60;
     display: flex;
     flex-direction: row;
   }
